# flask_typed_routes

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  posts.py  pyproject.toml  requirements-dev.txt  search.html  sitemap.xml
.github/workflows/: cd.yml  ci.yml
body/: index.html
cookie/: index.html
dependencies/: index.html
docs/: body.md  cookie.md  dependencies.md  errors.md  header.md  index.md  mode.md  openapi.md  path.md  query.md  setup.md
errors/: index.html
flask_typed_routes/: __init__.py  app.py  core.py  errors.py  fields.py  main.py  openapi.py  utils.py
header/: index.html
mode/: index.html
openapi/: index.html
path/: index.html
query/: index.html
search/: search_index.json
setup/: index.html
src/: __init__.py  app.py  errors.py  fields.py  main.py  utils.py
tests/: conftest.py  utils.py
tests/acceptance/: __init__.py  conftest.py  test_app.py  test_app_auto.py  test_app_manual.py  test_body.py  test_path.py  test_query.py
tests/unit/: test_app.py  test_core.py  test_errors.py  test_fields.py  test_openapi.py  test_utils.py
